# booking_scraper_new

./: .gitignore  404.html  README.md  booking_scraper.py  hotels_list.csv  hotels_list.xlsx  index.html  mkdocs.yml  pyproject.toml  scrapy.py
ai_models/: index.html
docs/: ai_models.md  etl.md  index.md  tests.md  usage.md  webscrapy.md
etl/: index.html
scrapy/: booking_scraper.py
search/: search_index.json
src/: __init__.py
src/models/: decision_tree_hotels.py
src/models/decision_tree_hotels/: load_data.py  main_tree.py  plot_hotels.py  preprocess_data.py  view_best_hotels.py
src/pipeline/: extract.py  load.py  main_etl.py  transform.py
src/scrapy/: click_button.py  close_popup.py  construct_url.py  extract_hotel_info.py  get_hotels.py  init_driver.py  init_service.py  main.py  main_scrapy.py  save_hotel_info.py  select_pages.py  select_pages_to_be_extracted.py
src/tests/: test_construct_url.py  test_extract_hotel_info.py  test_select_pages.py
tests/: index.html  test_construct_url.py
usage/: index.html
webscrapy/: index.html
