[tool.poetry]
name = "booking-scraper"
version = "0.1.0"
description = "A automation to scrap data from booking.com"
authors = ["venysssssssssss <shablaur7@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.4"
selenium = "^4.16.0"
blue = "^0.9.1"
isort = "^5.13.2"
openpyxl = "^3.1.2"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"
mkdocs-bootstrap = "^1.1.1"
mkdocs-bootswatch = "^1.1"
mkdocs-windmill = "^1.0.5"
pymdown-extensions = "^10.7"
pygments = "^2.17.2"
mkdocs-awesome-pages-plugin = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
